[project]
name = "py-unifi-route53-ddns"
version = "0.0.1"
authors = [
  { name="Andrey Kislyuk", email="kislyuk@gmail.com" },
]
description = "Route53 dynamic DNS for Ubiquiti Unifi gateway devices"
readme = "Readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "urllib3"
]

[project.urls]
Homepage = "https://github.com/cloud-utils/py-unifi-route53-ddns"
Issues = "https://github.com/cloud-utils/py-unifi-route53-ddns/issues"

[project.scripts]
py-unifi-route53-ddns = "py_unifi_route53_ddns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
